Bug 51588 - UI: Conditional formatting : Style list not sorted
Summary: UI: Conditional formatting : Style list not sorted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-30 04:31 UTC by pierre-yves samyn
Modified: 2012-11-25 02:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot LibO3.5.4 (7.67 KB, image/png)
2012-06-30 10:11 UTC, pierre-yves samyn
Details
Screenshot LibO3.6.0 (4.69 KB, image/png)
2012-06-30 10:12 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2012-06-30 04:31:29 UTC
Hello

Steps to reproduce:

1. File> New> Spreadsheet
2. Select A1, Format> Conditional formatting> Conditional Formatting...
3. Click Add
4. Click to open the styles listbox 

Expected result : list sorted
Actual result : list not sorted

Platform: 
              
Windows7 64 bits & Version 3.6.0.0.beta2 (Build ID: f010139)

Regards
Pierre-Yves
Comment 1 Markus Mohrhard 2012-06-30 07:23:06 UTC
The style list will not be sorted. We use the order provided by the styles supplier and I don't plan to change that. We used that and are still using this order in several places.
Comment 2 pierre-yves samyn 2012-06-30 10:11:41 UTC
Created attachment 63646 [details]
Screenshot LibO3.5.4
Comment 3 pierre-yves samyn 2012-06-30 10:12:17 UTC
Created attachment 63647 [details]
Screenshot LibO3.6.0
Comment 4 pierre-yves samyn 2012-06-30 10:17:10 UTC
Hello Markus

Sorry, I don't understand :
"We used that and are still using this order in several places."

This list is actually sorted in previous versions (see screenshots)
And, IMHO, we need it so...

Regards
Pierre-Yves
Comment 5 Markus Mohrhard 2012-06-30 11:04:31 UTC
I copied the code from the old dialog to the new one without changes.
Comment 6 Markus Mohrhard 2012-06-30 11:09:35 UTC
Seems you're right we used the sort property in the ui element definition but we can no longer use that because it will also sort the "New Entry..." part.
Comment 7 pierre-yves samyn 2012-06-30 22:19:28 UTC
(In reply to comment #6)
> we can no longer use that because it will also sort the "New Entry..." part.

I see...

So we have a double problem because of Issue id=51589

"New Style" and "Default" (or "Default" and "New Style") should start the list with the rest of the list sorted...
Comment 8 Markus Mohrhard 2012-11-25 02:03:22 UTC
Finally implemented this is master.
Comment 9 Not Assigned 2012-11-25 02:11:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=93e57ac549abc41bdc875b9cbe5869c251f879a7

style list should be sorted, fdo#51588



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.