style list should be sorted, fdo#51588

Change-Id: I771a17f2cc20602f2e6f8b18142eb990c473f2d4